--- a/public/views/index.html
+++ b/public/views/index.html
@@ -118,7 +118,7 @@
                   style="margin-top: 10px; margin-bottom: 10px"
                   >期限</label
                 >
-                <input type="text" name="deadline" class="form-control" />
+                <input type="date" name="deadline" class="form-control" />
                 <label style="margin-top: 10px; margin-bottom: 10px"
                   >カテゴリ</label
                 >
@@ -187,7 +187,7 @@
                     >期限</label
                   >
                   <input
-                    type="text"
+                    type="date"
                     name="deadline"
                     id="deadline"
                     class="form-control"
